[gd_scene load_steps=31 format=2]

[ext_resource path="res://Movement.gd" type="Script" id=1]
[ext_resource path="res://KinematicBody.gd" type="Script" id=2]
[ext_resource path="res://Camera_State_Machine.gd" type="Script" id=3]
[ext_resource path="res://Cam_Globals.gd" type="Script" id=4]
[ext_resource path="res://Camera_Interface.gd" type="Script" id=5]
[ext_resource path="res://Free_Look.gd" type="Script" id=6]
[ext_resource path="res://Lerp_In.gd" type="Script" id=7]
[ext_resource path="res://Lerp_Out.gd" type="Script" id=8]
[ext_resource path="res://Collision_Position.gd" type="Script" id=9]
[ext_resource path="res://Slide_Boi.gd" type="Script" id=10]
[ext_resource path="res://UnityBoi.gd" type="Script" id=11]
[ext_resource path="res://Assets/shogi.png" type="Texture" id=12]

[sub_resource type="PrismMesh" id=1]


[sub_resource type="Shader" id=2]

code = "shader_type spatial;
//render_mode blend_add,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
render_mode unshaded;

varying vec3 color;

void vertex() {
//	UV=UV*uv1_scale.xy+uv1_offset.xy;
	color = NORMAL;
}

uniform float alphaBoi;

void fragment() {
	ALBEDO = color;
//	vec2 base_uv = UV;
//	vec4 albedo_tex = texture(texture_albedo,base_uv);
//	ALBEDO = albedo.rgb * albedo_tex.rgb;
//	ALPHA = albedo.a * albedo_tex.a;
	ALPHA = alphaBoi;

}
"

[sub_resource type="ShaderMaterial" id=3]

shader = SubResource( 2 )
shader_param/alphaBoi = 1.0

[sub_resource type="SphereShape" id=4]


[sub_resource type="CubeMesh" id=5]


[sub_resource type="SpatialMaterial" id=6]

albedo_color = Color( 0, 0.368627, 1, 1 )

[sub_resource type="ConvexPolygonShape" id=7]

points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="CubeMesh" id=8]


[sub_resource type="SpatialMaterial" id=9]

albedo_color = Color( 0.854902, 0.823529, 0.619608, 1 )

[sub_resource type="ConvexPolygonShape" id=10]

points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="SpatialMaterial" id=11]

flags_unshaded = true
params_cull_mode = 2
albedo_texture = ExtResource( 12 )

[sub_resource type="PlaneMesh" id=12]

material = SubResource( 11 )

[sub_resource type="Shader" id=13]

code = "shader_type canvas_item;
render_mode blend_mix;

void fragment(){

	COLOR = vec4(0.0, 0.0, 0.0, 0.5);
}
"

[sub_resource type="ShaderMaterial" id=14]

shader = SubResource( 13 )

[sub_resource type="Shader" id=15]

code = "shader_type canvas_item;
render_mode blend_mix;

void fragment(){

	COLOR = vec4(0.0, 0.0, 0.0, 0.5);
}
"

[sub_resource type="ShaderMaterial" id=16]

shader = SubResource( 15 )

[sub_resource type="CubeMesh" id=17]


[sub_resource type="SpatialMaterial" id=18]

flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[node name="Node" type="Node"]

[node name="Target" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )
script = ExtResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )
collision_layer = 2
collision_mask = 2
collision/safe_margin = 0.005
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 2.56764 )
shape = SubResource( 4 )

[node name="Camera" type="Camera" parent="KinematicBody"]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0, 0 )
script = ExtResource( 3 )

[node name="Globals" type="Node" parent="KinematicBody/Camera"]
script = ExtResource( 4 )

[node name="States" type="Node" parent="KinematicBody/Camera"]
script = ExtResource( 5 )

[node name="Free_Look" type="Node" parent="KinematicBody/Camera/States"]
script = ExtResource( 6 )

[node name="Lerp_In" type="Node" parent="KinematicBody/Camera/States"]
script = ExtResource( 7 )

[node name="Lerp_Out" type="Node" parent="KinematicBody/Camera/States"]
script = ExtResource( 8 )

[node name="Collision_Position" type="Node" parent="KinematicBody/Camera/States"]
script = ExtResource( 9 )

[node name="Slide_Boi" type="Node" parent="KinematicBody/Camera/States"]
script = ExtResource( 10 )

[node name="UnityBoi" type="Node" parent="KinematicBody/Camera/States"]
script = ExtResource( 11 )
mouseSens = 0.5
damp = 30.0

[node name="OmniLight" type="OmniLight" parent="."]

[node name="A" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 6.8, 0, 0, 0, 1, -5.91625, 2.33723, 15.2674 )
layers = 3
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="StaticBody" type="StaticBody" parent="A"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="A/StaticBody"]
shape = SubResource( 7 )

[node name="B" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 10.46, 0, 0, 0, 30, 5, 0, 0 )
layers = 3
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="StaticBody" type="StaticBody" parent="B"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="B/StaticBody"]
shape = SubResource( 10 )

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, -6.12944, 0, 2.494 )
mesh = SubResource( 12 )
material/0 = null

[node name="FpsPanel" type="Panel" parent="."]
editor/display_folded = true
material = SubResource( 14 )
margin_left = 327.0
margin_right = 412.0
margin_bottom = 33.0

[node name="FpsLabel" type="Label" parent="FpsPanel"]
margin_left = 36.0
margin_top = 9.0
margin_right = 76.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="FpsPanel"]
margin_left = 5.0
margin_top = 9.0
margin_right = 45.0
margin_bottom = 23.0
text = "FPS:"

[node name="Debug" type="Panel" parent="."]
editor/display_folded = true
material = SubResource( 16 )
margin_right = 327.0
margin_bottom = 103.0

[node name="Label_Cam_State" type="Label" parent="Debug"]
margin_right = 104.0
margin_bottom = 35.0
text = "Cam state: "

[node name="Cam_State" type="Label" parent="Debug"]
margin_left = 79.0
margin_right = 119.0
margin_bottom = 16.0
text = "Yuo"

[node name="Key1" type="Label" parent="Debug"]
margin_left = 2.0
margin_top = 20.0
margin_right = 42.0
margin_bottom = 34.0

[node name="Key2" type="Label" parent="Debug"]
margin_left = 2.0
margin_top = 40.0
margin_right = 42.0
margin_bottom = 54.0

[node name="Key3" type="Label" parent="Debug"]
margin_left = 2.0
margin_top = 60.0
margin_right = 42.0
margin_bottom = 74.0

[node name="Key4" type="Label" parent="Debug"]
margin_left = 2.0
margin_top = 80.0
margin_right = 42.0
margin_bottom = 94.0

[node name="Value1" type="Label" parent="Debug"]
margin_left = 100.0
margin_top = 20.0
margin_right = 140.0
margin_bottom = 34.0

[node name="Value2" type="Label" parent="Debug"]
margin_left = 100.0
margin_top = 40.0
margin_right = 140.0
margin_bottom = 54.0

[node name="Value3" type="Label" parent="Debug"]
margin_left = 100.0
margin_top = 60.0
margin_right = 140.0
margin_bottom = 74.0

[node name="Value4" type="Label" parent="Debug"]
margin_left = 100.0
margin_top = 80.0
margin_right = 140.0
margin_bottom = 94.0

[node name="SmolCube" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 1.81681, 0 )
mesh = SubResource( 17 )
material/0 = SubResource( 18 )

